fix layout shift

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -44,6 +44,10 @@
         @apply border-border;
     }
 
+    html {
+        scrollbar-gutter: stable;
+    }
+
     body {
         @apply bg-background text-gray-700 font-sans antialiased leading-relaxed;
     }
